tree-sitter-kestrel/test/corpus/enum.txt
================================================================================
Enum
================================================================================

enum Temperature {
  Celsius(Float)
  Fahrenheit(Float)
}

enum Colors {
  Rgb(Int, Int, Int)
  Rgba(Int, Int, Int, Int)
  Hex(Int)
}

--------------------------------------------------------------------------------

(source
  (enum
    (typename)
    (enum_field
      (typename)
      (typename))
    (enum_field
      (typename)
      (typename)))
  (enum
    (typename)
    (enum_field
      (typename)
      (typename)
      (typename)
      (typename))
    (enum_field
      (typename)
      (typename)
      (typename)
      (typename)
      (typename))
    (enum_field
      (typename)
      (typename))))
