tree-sitter-kestrel/test/corpus/trait.txt
================================================================================
trait
================================================================================

trait Comparable[A] {
  fn compare(left: A, right: A): Bool
}

trait Stringable {
  fn toStr(): Str
}

--------------------------------------------------------------------------------

(source
  (trait
    (typename)
    (generics
      (generic_type
        (genericname)))
    (trait_field
      (identifier)
      (param
        (identifier)
        (type
          (typename)))
      (param
        (identifier)
        (type
          (typename)))
      (return_type
        (typename))))
  (trait
    (typename)
    (trait_field
      (identifier)
      (return_type
        (typename)))))
